# nominal-client-rs

./: CHANGELOG.md  Cargo.toml  Cross.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint-pr-title.yml  merge-dependabot.yml  release-cli.yml  release-plz.yml
nom-cli/: Cargo.toml
nom-cli/src/: main.rs
nom-cli/src/commands/: asset.rs  config.rs  mod.rs  user.rs
nominal/: Cargo.toml
nominal-cli/: Cargo.toml  build.rs
nominal-cli/src/: context.rs  main.rs  output.rs  validate.rs
nominal-cli/src/commands/: api.rs  asset.rs  attachment.rs  channel.rs  config.rs  connection.rs  dataset.rs  endpoint.rs  fs.rs  grpc.rs  ingest.rs  mod.rs  run.rs  user.rs  video.rs
nominal-client/: Cargo.toml
nominal-client/src/: config.rs  error.rs  lib.rs
nominal-client/src/core/: asset.rs  client.rs  datetime.rs  mod.rs  rid.rs  run.rs  user.rs  utils.rs
nominal/examples/: create_asset.rs  get_asset.rs  grpc_health_check.rs  smartcard_concurrent_poll.rs  smartcard_get_asset.rs
nominal/src/: config.rs  error.rs  lib.rs  validate.rs
nominal/src/core/: asset.rs  attachment.rs  client.rs  datasource.rs  datetime.rs  mod.rs  rid.rs  run.rs  smartcard.rs  streaming.rs  template.rs  user.rs  utils.rs  workbook.rs  workspace.rs
nominal/src/core/catalog/: channel.rs  connection.rs  dataset.rs  mod.rs  video.rs
nominal/src/core/ingest/: filetype.rs  handle.rs  job.rs  mod.rs  multipart.rs  options.rs  progress.rs  timestamp.rs
nominal/src/smartcard/: der.rs  mod.rs  pkcs11.rs  signing.rs
nominal/tests/fixtures/config/: config-v1-deprecated-example.yml  config-v2-bad-example.yml  config-v2-example.yml
src/: client.rs  main.rs
src/commands/: asset.rs  config.rs  mod.rs  user.rs
