[package]
name = "nom-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nom"
path = "src/main.rs"

[dependencies]
nominal-client = { path = "../nominal-client" }
clap = { version = "4", features = ["derive"] }
conjure-http = "4.15.0"
conjure-object = "4.15.0"
nominal-api = "*"
tokio = { version = "1.47.1", features = ["full"] }
