[package]
name = "nom-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nom"
path = "src/main.rs"

[dependencies]
nominal = { path = "../nominal" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
