[package]
name = "nominal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Automate Nominal workflows in Rust"
homepage = "https://nominal.io"

[dependencies]
chrono = { version = "0.4", features = ["clock", "std"] }
futures = "0.3"
conjure-error = "5.10"
conjure-http = "5.10"
conjure-object = "5.10"
conjure-runtime = { package = "conjure-runtime-rustls-platform-verifier", version = "0.2" }
dirs = "5"
nominal-api = "0.1163"
regex = "1.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2"
tracing = "0.1"
