[package]
name = "nominal"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Automate Nominal workflows in Rust"
homepage = "https://nominal.io"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["clock", "std"] }
futures = "0.3"
conjure-error = "5.10"
conjure-http = "5.10"
conjure-object = "5.10"
conjure-runtime = { package = "conjure-runtime-rustls-platform-verifier", version = "0.2" }
dirs = "5"
nominal-api = "0.1212"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing = "0.1"
