[package]
name = "nominal"
version = "0.4.3"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Automate Nominal workflows in Rust"
homepage = "https://nominal.io"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["clock", "std"] }
futures = "0.3"
conjure-error = "5.10"
conjure-http = "5.10"
conjure-object = "5.10"
conjure-runtime = { package = "conjure-runtime-rustls-platform-verifier", version = "0.2.1" }
dirs = "5"
nominal-api = "0.1218"
nominal-streaming = "0.9.1"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
cryptoki = { version = "0.12", optional = true }
rpassword = { version = "7", optional = true }
x509-cert = { version = "0.2", optional = true }
p256 = { version = "0.13", features = ["ecdsa-core"], optional = true }
p384 = { version = "0.13", features = ["ecdsa-core"], optional = true }

[features]
smartcard = ["dep:cryptoki", "dep:rpassword", "dep:x509-cert", "dep:p256", "dep:p384"]
